2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Use
	"out of memory" error messagge.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Add scanning
	of diskfilter for diskfilter on diskfilter support.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Ensure that the child is not localised.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Check for themes/starfield/theme.txt and not
	themes/starfield.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regcomp.c (regerror): Fix out-of-range array lookup.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/idt.c (grub_gdb_breakpoint): Remove old debug code.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c (grub_cmd_hashsum): Remove dot at the end
	of error message.

2012-03-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix install non-PreP IEEE1275 install.

2012-03-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/sendkey.c (GRUB_MOD_INIT): Fix confusing
	message.
	* util/grub-install.in: Fix and gettextize error message.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (options): Replace N with NUM and S with STRING.
	Gettextize.
	* util/grub-mount.c (options): Likewise.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c (options): Replace VAR with VARNAME and
	gettextize.
	* grub-core/commands/search_wrap.c (options): Likewise.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix a spurious warning.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S (multiboot_trampoline): Fix
	size calculation.